# backup-py-projects

./: LICENSE  README.md  Task.md  pyproject.toml
.github/: copilot-instructions.md  project-instructions.md
src/backup_py_projects/: __init__.py  cli.py  copier.py  filters.py  progress.py
